syntax = "proto3";

package employees;

import "google/protobuf/empty.proto";

enum Employeestatus {
    UNKNOWN = 0;
    OFFLINE = 1;
    BUSY = 2;
    AVAILABLE = 3;
}

message Employee {
    int32 id = 1;
    int32 departmentid = 2;
    string surname = 3;
    string name = 4;
    string gender = 5;
    int32 age = 6;
    Employeestatus status = 7;
}

message EmployeeRequest {
    int32 id = 1;
}

service Employees {
    rpc GetEmployee (EmployeeRequest) returns (Employee) {};
    rpc CreateEmployee (stream Employee) returns (google.protobuf.Empty) {};
    rpc GetEmployees (google.protobuf.Empty) returns (stream Employee) {};    
}